# handrighting

./: .gitignore  OpenCVWrapper.hpp  README.md  TrainAndTest.cpp  TrainAndTest.hpp
MachineLearning/: CMakeCache.txt  CMakeLists.txt  DetectLines  DetectLines.cpp  GenData  GenData.cpp  HTMLTestRunner.py  Makefile  TestBench  TestBench.cpp  TestBench.py  TestBench_backup.py  TrainAndTest  TrainAndTest.cpp  TrainAndTest_RForest  TrainAndTest_RForest.cpp  TrainDataAutomation.m  TrainDataAutomation.m~  classifications.xml  cmake_install.cmake  images.xml  test.html
MachineLearning/data/: process_files.m
MachineLearning/data/complete_forms/: TrainDataAutomation.m  TrainDataAutomation.m~  crop_images.m  crop_images.m~  crop_vals.mat  rec_values.xlsx
MachineLearning/data/complete_forms/A/: classifications.xml  images.xml
MachineLearning/data/complete_forms/B/: classifications.xml  images.xml
MachineLearning/data/complete_forms/C/: classifications.xml  images.xml
MachineLearning/data/complete_forms/D/: classifications.xml  images.xml
MachineLearning/data/complete_forms/E/: classifications.xml  images.xml
MachineLearning/data/complete_forms/F/: classifications.xml  images.xml
MachineLearning/data/raw_scans2/: Rects.numbers  create_folders.m  crop_images.m  crop_images.m~  crop_vals.mat
MachineLearning/data/temp/: BasicImageEnhancementAndAnalysisTechniquesExample.m  composite_image.m  crop_images.m  crop_vals.mat  move_composites.m  process_files.m  try_this.m
MachineLearning/src/: detectText.cpp  detectText.hpp
handrighting.xcodeproj/: project.pbxproj
(+125 files in other folders)
